Fix skip fading not skipping sometimes issue

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section id="newSongSection">
         <div id="newSongTitle"><h3>Add New Song!</h3></div>
 
-        <form action="" id="newSongForm" onreset="handleFormReset()" onsubmit="handleFormSubmit()">
+        <form action="" id="newSongForm" onreset="handleFormReset()" onsubmit="handleFormSubmit(event)">
           <div>
             <div>
               <label for="sender">Sender / Reciever:</label>
